@@ -1,3 +1,7 @@
+2009-01-16  Scott Ellington  <scott.ellington@gmail.com>
+
+	* Xml/Serialization/MapSerializer.cs: fix locale issues
+
 2009-01-15  Scott Ellington  <scott.ellington@gmail.com>
 
 	* Data/KeyholeMarkupLanguage.cs: fix regression Style.id is attribute
